resolving circle CI issues
